--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<title>Hugo Identity Theme</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" href="http://replace-this-with-your-hugo-site.com/images/icons/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon-precomposed" href="http://replace-this-with-your-hugo-site.com/images/icons/apple-touch-icon-precomposed.png" />
+		<link rel="icon" href="https://github.com/ye-lin-aung/me/images/icons/favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon-precomposed" href="https://github.com/ye-lin-aung/me/images/icons/apple-touch-icon-precomposed.png" />
 		
-		<link rel="stylesheet" href="http://replace-this-with-your-hugo-site.com/assets/css/main.css" />
+		<link rel="stylesheet" href="https://github.com/ye-lin-aung/me/assets/css/main.css" />
 		
 		
-		<noscript><link rel="stylesheet" href="http://replace-this-with-your-hugo-site.com/assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="https://github.com/ye-lin-aung/me/assets/css/noscript.css" /></noscript>
 		<style>
 		body {
 		height: 100%;
@@ -38,7 +38,7 @@
 				
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="http://replace-this-with-your-hugo-site.com/images/avatars/jane.jpg" alt="" /></span>
+							<span class="avatar"><img src="https://github.com/ye-lin-aung/me/images/avatars/jane.jpg" alt="" /></span>
 							<h1>Ye lin aung</h1>
 							<p>Android Engineer</p>
 						</header>
