--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<title>Hugo Identity Theme</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" href="https://github.com/ye-lin-aung/me/raw/images/icons/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon-precomposed" href="https://github.com/ye-lin-aung/me/images/icons/apple-touch-icon-precomposed.png" />
+		<link rel="icon" href="./images/icons/favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon-precomposed" href="./images/icons/apple-touch-icon-precomposed.png" />
 		
-		<link rel="stylesheet" href="https://github.com/ye-lin-aung/me/raw/gh-pages/assets/css/main.css" />
+		<link rel="stylesheet" href="./assets/css/main.css" />
 		
 		
-		<noscript><link rel="stylesheet" href="https://github.com/ye-lin-aung/me/raw/assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="./assets/css/noscript.css" /></noscript>
 		<style>
 		body {
 		height: 100%;
