--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="https://github.com/ye-lin-aung/me/images/avatars/jane.jpg" alt="" /></span>
+							<span class="avatar"><img src="https://avatars3.githubusercontent.com/u/11737664?v=3&s=460" alt="" /></span>
 							<h1>Ye lin aung</h1>
 							<p>Android Engineer</p>
 						</header>
