--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<header>
 							<span class="avatar"><img src="https://avatars3.githubusercontent.com/u/11737664?v=3&s=100" alt="" /></span>
 							<h1>Ye lin aung</h1>
-							<p>Android Engineer</p>
+							<p>Android Developer</p>
 						</header>
 							        
 																<hr />
