--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				
 					<section id="main">
 						<header>
-							<span class="avatar"><a href="https://udacity.yelinaung.xyz"><img src="https://avatars3.githubusercontent.com/u/11737664?v=3&s=100" alt="" /></a></span>
+							<span class="avatar"><a href="profiles.udacity.com/u/yeaung"><img src="https://avatars3.githubusercontent.com/u/11737664?v=3&s=100" alt="" /></a></span>
 							<h1>Ye lin aung</h1>
 							<p>Android Developer</p>
 						</header>
